--- a/index.html
+++ b/index.html
@@ -5,337 +5,183 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Serveur GMod - Accueil</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    * { margin:0; padding:0; box-sizing:border-box; }
     body {
-      background-color: #121212;
-      color: white;
-      font-family: Arial, sans-serif;
-      overflow-x: hidden;
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-    }
-    .side-image {
-      position: fixed;
-      top: 0;
-      width: 20%;
-      height: 100%;
-      object-fit: cover;
-      z-index: 0;
-    }
-    .left-image {
-      left: 0;
-    }
-    .right-image {
-      right: 0;
+      background:#121212;
+      color:#fff;
+      font-family:Arial, sans-serif;
+      overflow-x:hidden;
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      min-height:100vh;
     }
     .main-content {
-      position: relative;
-      z-index: 1;
-      margin-left: 20%;
-      margin-right: 20%;
-      padding: 40px 20px;
-      text-align: center;
-      flex-grow: 1;
+      width:100%;
+      max-width:1000px;
+      padding:20px;
+      flex-grow:1;
     }
-    .logo {
-      width: 150px;
-      margin-bottom: 20px;
+    .logo { width:150px; margin:20px auto; display:block; }
+    h1 { text-align:center; margin-bottom:20px; }
+    nav { text-align:center; margin-bottom:30px; }
+    .button, .dropdown > .button {
+      background:#1e90ff;
+      color:#fff;
+      padding:10px 20px;
+      margin:5px;
+      border-radius:8px;
+      text-decoration:none;
+      display:inline-block;
+      transition:background .3s;
     }
-    .button {
-      background-color: #1e90ff;
-      color: white;
-      padding: 10px 20px;
-      text-decoration: none;
-      border-radius: 8px;
-      margin: 5px;
-      display: inline-block;
-      transition: background 0.3s;
-    }
-    .button:hover {
-      background-color: #0f75d1;
-    }
-    .dropdown {
-      position: relative;
-      display: inline-block;
-    }
+    .button:hover { background:#0f75d1; }
+    .dropdown { position:relative; display:inline-block; }
     .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: #1e1e1e;
-      min-width: 160px;
-      box-shadow: 0px 8px 16px rgba(0,0,0,0.3);
-      border-radius: 8px;
-      z-index: 2;
+      display:none;
+      position:absolute;
+      background:#1e1e1e;
+      border-radius:8px;
+      top:100%;
+      left:0;
+      text-align:left;
+      z-index:10;
     }
     .dropdown-content a {
-      color: white;
-      padding: 10px 16px;
-      text-decoration: none;
-      display: block;
-      text-align: left;
+      display:block;
+      color:#fff;
+      padding:8px 16px;
+      text-decoration:none;
     }
-    .dropdown-content a:hover {
-      background-color: #333;
-    }
-    .dropdown:hover .dropdown-content {
-      display: block;
-    }
+    .dropdown-content a:hover { background:#333; }
+    .dropdown:hover .dropdown-content { display:block; }
+
     .steam-collection {
-      margin-top: 50px;
-      padding: 30px;
-      background-color: #1a1a1a;
-      border-radius: 12px;
-      text-align: center;
+      background:#1a1a1a;
+      padding:20px;
+      border-radius:12px;
+      margin-bottom:40px;
+      text-align:center;
     }
-    .steam-collection h2 {
-      margin-bottom: 10px;
-    }
-    .steam-collection p {
-      margin-bottom: 15px;
-      font-size: 1.1em;
-    }
-    /* Carrousel styles */
+    .steam-collection h2 { margin-bottom:10px; }
+    .steam-collection p { margin-bottom:15px; font-size:1.1em; }
+
     .carousel-container {
-      position: relative;
-      width: 600px; /* 3 images x 180px wide */
-      margin: 0 auto 20px;
-      overflow: hidden;
-      border-radius: 12px;
+      width:100%;
+      overflow:hidden;
+      border-radius:12px;
+      margin:0 auto;
     }
     .carousel-track {
-      display: flex;
-      transition: transform 1s ease;
-      width: max-content; /* largeur automatique en fonction du contenu */
+      display:flex;
+      transition:transform 0.5s ease-in-out;
     }
     .carousel-slide {
-      display: flex;
-      width: 600px; /* largeur d'un slide = 3 images * 180px */
-      justify-content: space-between;
-      flex-shrink: 0; /* empêche le rétrécissement */
+      flex:0 0 calc(100%/3);
+      max-width:calc(100%/3);
+      padding:5px;
     }
     .carousel-slide img {
-      width: 180px;
-      height: 120px;
-      border-radius: 12px;
-      object-fit: cover;
+      width:100%;
+      height:auto;
+      border-radius:8px;
+      display:block;
     }
+
     .about {
-      padding: 30px;
-      background-color: #1a1a1a;
-      border-radius: 12px;
-      margin-left: 20%;
-      margin-right: 20%;
-      text-align: center;
-      z-index: 1;
+      background:#1a1a1a;
+      padding:20px;
+      border-radius:12px;
+      margin-bottom:40px;
+      text-align:center;
+    }
+
+    @media(max-width:768px) {
+      .carousel-slide { flex:0 0 calc(100%/2); max-width:calc(100%/2); }
+    }
+    @media(max-width:480px) {
+      .carousel-slide { flex:0 0 100%; max-width:100%; }
     }
   </style>
 </head>
 <body>
 
-  <!-- Images étendues -->
-  <img src="image1.png" alt="Image gauche" class="side-image left-image" />
-  <img src="image2.png" alt="Image droite" class="side-image right-image" />
-
-  <!-- Contenu principal -->
   <div class="main-content">
-    <img src="logo.png" alt="Logo Serveur" class="logo" />
+    <img src="logo.png" alt="Logo Serveur" class="logo">
     <h1>Bienvenue sur notre serveur GMod !</h1>
-    <p>Rejoignez une communauté active et amusante sur Garry's Mod.</p>
 
-    <nav style="margin-top: 20px;">
-      <a class="button" href="reglement.html">📜 Règlement</a>
-      <a class="button" href="boutique.html">🛒 Boutique</a>
-      <a class="button" href="mises-a-jour.html">📰 Mises à jour</a>
-
+    <nav>
+      <a href="reglement.html" class="button">📜 Règlement</a>
+      <a href="boutique.html" class="button">🛒 Boutique</a>
+      <a href="mises-a-jour.html" class="button">📰 Mises à jour</a>
       <div class="dropdown">
         <a class="button">🎭 Rôles</a>
         <div class="dropdown-content">
-          <a href="iteration.html">Les itérations</a>
+          <a href="iteration.html">Itérations</a>
           <a href="classe_d.html">Classe D</a>
-          <a href="corps_securite.html">Département du Corps de sûreté</a>
-          <a href="departement_administratif.html">Département administratif</a>
-          <a href="departement_medical.html">Département médicale</a>
-          <a href="departement_technique.html">Département Ingénierie et Service Technique</a>
-          <a href="departement_scientifique.html">Département Scientifique et de Recherche</a>
+          <a href="corps_securite.html">Corps de sûreté</a>
+          <a href="departement_administratif.html">Administratif</a>
+          <a href="departement_medical.html">Médical</a>
+          <a href="departement_technique.html">Technique</a>
+          <a href="departement_scientifique.html">Scientifique</a>
           <a href="SCP.html">SCP</a>
         </div>
       </div>
     </nav>
 
-    <!-- Section Steam -->
     <section class="steam-collection">
       <h2>📦 Collection Steam</h2>
-      <p>Découvrez les addons utilisés sur notre serveur pour profiter de la meilleure expérience !</p>
-
+      <p>Voici les addons utilisés sur notre serveur :</p>
       <div class="carousel-container">
         <div class="carousel-track" id="carouselTrack">
-          <div class="carousel-slide">
-            <img src="addons-images/addon1.png" alt="Addon 1" />
-            <img src="addons-images/addon2.png" alt="Addon 2" />
-            <img src="addons-images/addon3.png" alt="Addon 3" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon4.png" alt="Addon 4" />
-            <img src="addons-images/addon5.png" alt="Addon 5" />
-            <img src="addons-images/addon6.png" alt="Addon 6" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon7.png" alt="Addon 7" />
-            <img src="addons-images/addon8.png" alt="Addon 8" />
-            <img src="addons-images/addon9.png" alt="Addon 9" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon10.png" alt="Addon 10" />
-            <img src="addons-images/addon11.png" alt="Addon 11" />
-            <img src="addons-images/addon12.png" alt="Addon 12" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon13.png" alt="Addon 13" />
-            <img src="addons-images/addon14.png" alt="Addon 14" />
-            <img src="addons-images/addon15.png" alt="Addon 15" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon16.png" alt="Addon 16" />
-            <img src="addons-images/addon17.png" alt="Addon 17" />
-            <img src="addons-images/addon18.png" alt="Addon 18" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon19.png" alt="Addon 19" />
-            <img src="addons-images/addon20.png" alt="Addon 20" />
-            <img src="addons-images/addon21.png" alt="Addon 21" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon22.png" alt="Addon 22" />
-            <img src="addons-images/addon23.png" alt="Addon 23" />
-            <img src="addons-images/addon24.png" alt="Addon 24" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon25.png" alt="Addon 25" />
-            <img src="addons-images/addon26.png" alt="Addon 26" />
-            <img src="addons-images/addon27.png" alt="Addon 27" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon28.png" alt="Addon 28" />
-            <img src="addons-images/addon29.png" alt="Addon 29" />
-            <img src="addons-images/addon30.png" alt="Addon 30" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon31.png" alt="Addon 31" />
-            <img src="addons-images/addon32.png" alt="Addon 32" />
-            <img src="addons-images/addon33.png" alt="Addon 33" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon34.png" alt="Addon 34" />
-            <img src="addons-images/addon35.png" alt="Addon 35" />
-            <img src="addons-images/addon36.png" alt="Addon 36" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon37.png" alt="Addon 37" />
-            <img src="addons-images/addon38.png" alt="Addon 38" />
-            <img src="addons-images/addon39.png" alt="Addon 39" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon40.png" alt="Addon 40" />
-            <img src="addons-images/addon41.png" alt="Addon 41" />
-            <img src="addons-images/addon42.png" alt="Addon 42" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon43.png" alt="Addon 43" />
-            <img src="addons-images/addon44.png" alt="Addon 44" />
-            <img src="addons-images/addon45.png" alt="Addon 45" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon46.png" alt="Addon 46" />
-            <img src="addons-images/addon47.png" alt="Addon 47" />
-            <img src="addons-images/addon48.png" alt="Addon 48" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon49.png" alt="Addon 49" />
-            <img src="addons-images/addon50.png" alt="Addon 50" />
-            <img src="addons-images/addon51.png" alt="Addon 51" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon52.png" alt="Addon 52" />
-            <img src="addons-images/addon53.png" alt="Addon 53" />
-            <img src="addons-images/addon54.png" alt="Addon 54" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon55.png" alt="Addon 55" />
-            <img src="addons-images/addon56.png" alt="Addon 56" />
-            <img src="addons-images/addon57.png" alt="Addon 57" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon58.png" alt="Addon 58" />
-            <img src="addons-images/addon59.png" alt="Addon 59" />
-            <img src="addons-images/addon60.png" alt="Addon 60" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon61.png" alt="Addon 61" />
-            <img src="addons-images/addon62.png" alt="Addon 62" />
-            <img src="addons-images/addon63.png" alt="Addon 63" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon64.png" alt="Addon 64" />
-            <img src="addons-images/addon65.png" alt="Addon 65" />
-            <img src="addons-images/addon66.png" alt="Addon 66" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon67.png" alt="Addon 67" />
-            <img src="addons-images/addon68.png" alt="Addon 68" />
-            <img src="addons-images/addon69.png" alt="Addon 69" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon70.png" alt="Addon 70" />
-            <img src="addons-images/addon71.png" alt="Addon 71" />
-            <img src="addons-images/addon72.png" alt="Addon 72" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon73.png" alt="Addon 73" />
-            <img src="addons-images/addon74.png" alt="Addon 74" />
-            <img src="addons-images/addon75.png" alt="Addon 75" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon76.png" alt="Addon 76" />
-            <img src="addons-images/addon77.png" alt="Addon 77" />
-            <img src="addons-images/addon78.png" alt="Addon 78" />
-          </div>
-          <div class="carousel-slide">
-            <img src="addons-images/addon79.png" alt="Addon 79" />
-            <img src="addons-images/addon80.png" alt="Addon 80" />
-          </div>
-          
-          <!-- Tu peux ajouter d’autres slides ici en suivant le même modèle -->
+          <!-- Ajoute ici les images de ton index -->
+          <div class="carousel-slide"><img src="addons-images/addon1.png" alt="addon1"></div>
+          <div class="carousel-slide"><img src="addons-images/addon2.png" alt="addon2"></div>
+          <div class="carousel-slide"><img src="addons-images/addon3.png" alt="addon3"></div>
+          <div class="carousel-slide"><img src="addons-images/addon4.png" alt="addon4"></div>
+          <div class="carousel-slide"><img src="addons-images/addon5.png" alt="addon5"></div>
+          <div class="carousel-slide"><img src="addons-images/addon6.png" alt="addon6"></div>
+          <div class="carousel-slide"><img src="addons-images/addon7.png" alt="addon7"></div>
+          <div class="carousel-slide"><img src="addons-images/addon8.png" alt="addon8"></div>
+          <div class="carousel-slide"><img src="addons-images/addon9.png" alt="addon9"></div>
+          <div class="carousel-slide"><img src="addons-images/addon10.png" alt="addon10"></div>
+          <div class="carousel-slide"><img src="addons-images/addon11.png" alt="addon11"></div>
+          <div class="carousel-slide"><img src="addons-images/addon12.png" alt="addon12"></div>
+          <div class="carousel-slide"><img src="addons-images/addon13.png" alt="addon13"></div>
+          <div class="carousel-slide"><img src="addons-images/addon14.png" alt="addon14"></div>
+          <div class="carousel-slide"><img src="addons-images/addon15.png" alt="addon15"></div>
+          <div class="carousel-slide"><img src="addons-images/addon16.png" alt="addon16"></div>
+          <!-- ... -->
         </div>
       </div>
-
       <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3042213523" target="_blank" class="button">Voir la collection</a>
+    </section>
+
+    <section class="about">
+      <h2>À propos</h2>
+      <p>Notre serveur Garry's Mod est une aventure passionnée par une équipe motivée. On cherche à proposer une expérience RP fun, stable, et libre d'abus !</p>
     </section>
   </div>
 
-  <!-- Section À propos -->
-  <section class="about">
-    <h2>À propos</h2>
-    <p>Notre serveur Garry's Mod est une aventure passionnée par une équipe motivée. On cherche à proposer une expérience RP fun, stable, et libre d'abus !</p>
-    <p>Rejoignez-nous sur Discord ou en jeu pour en savoir plus.</p>
-  </section>
-
-  <!-- JS pour le carrousel -->
   <script>
-    const carouselTrack = document.getElementById('carouselTrack');
-    const slides = carouselTrack.children;
-    const slideWidth = 600; // largeur fixe d'un slide en px
-    let index = 0;
+    const track = document.getElementById('carouselTrack');
+    const slides = Array.from(track.children);
+    let current = 0;
 
-    setInterval(() => {
-      index++;
-      if (index >= slides.length) index = 0;
-      carouselTrack.style.transform = `translateX(-${index * slideWidth}px)`;
-    }, 3000);
+    function moveCarousel() {
+      current++;
+      if (current >= slides.length) current = 0;
+      const slideWidth = slides[0].getBoundingClientRect().width;
+      track.style.transform = `translateX(-${current * slideWidth}px)`;
+    }
+
+    let carouselInterval = setInterval(moveCarousel, 3000);
+
+    track.addEventListener('mouseenter', () => clearInterval(carouselInterval));
+    track.addEventListener('mouseleave', () => {
+      clearInterval(carouselInterval);
+      carouselInterval = setInterval(moveCarousel, 3000);
+    });
   </script>
 
 </body>
