--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     }
     .logo { width:150px; margin:20px auto; display:block; }
     h1 { text-align:center; margin-bottom:20px; }
+    h2 { text-align:center; margin-bottom:10px; }
     nav { text-align:center; margin-bottom:30px; }
     .button, .dropdown > .button {
       background:#1e90ff;
@@ -124,9 +125,9 @@
     <img src="image2.png" alt="Image droite" class="side-image right-image" />
     <!-- Contenu principal -->
     <div class="main-content">
-    <img src="logo.png" alt="Logo Serveur" class="logo">
-    <h1>Bienvenue sur notre serveur GMod !</h1>
-    <p>Rejoignez une communauté active et amusante sur Garry's Mod.</p>
+      <img src="logo.png" alt="Logo Serveur" class="logo">
+      <h1>Bienvenue sur notre serveur GMod !</h1>
+      <h2>Rejoignez une communauté active et amusante sur Garry's Mod.</h2>
 
     <nav>
       <a href="reglement.html" class="button">📜 Règlement</a>
