--- a/index.html
+++ b/index.html
@@ -5,118 +5,207 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Serveur GMod - Accueil</title>
   <style>
-    * { margin:0; padding:0; box-sizing:border-box; }
-    body {
-      background:#121212;
-      color:#fff;
-      font-family:Arial, sans-serif;
-      overflow-x:hidden;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      min-height:100vh;
-    }
-    .side-image {
-      position: fixed;
-      top: 0;
-      width: 20%;
-      height: 100%;
-      object-fit: cover;
-      z-index: 0;
-    }
-    .left-image {
-      left: 0;
-    }
-    .right-image {
-      right: 0;
-    }
-    .main-content {
-      width:100%;
-      max-width:1000px;
-      padding:20px;
-      flex-grow:1;
-    }
-    .logo { width:150px; margin:20px auto; display:block; }
-    h1 { text-align:center; margin-bottom:20px; }
-    h2 { text-align:center; margin-bottom:10px; }
-    nav { text-align:center; margin-bottom:30px; }
-    .button, .dropdown > .button {
-      background:#1e90ff;
-      color:#fff;
-      padding:10px 20px;
-      margin:5px;
-      border-radius:8px;
-      text-decoration:none;
-      display:inline-block;
-      transition:background .3s;
-    }
-    .button:hover { background:#0f75d1; }
-    .dropdown { position:relative; display:inline-block; }
-    .dropdown-content {
-      display:none;
-      position:absolute;
-      background:#1e1e1e;
-      border-radius:8px;
-      top:100%;
-      left:0;
-      text-align:left;
-      z-index:10;
-    }
-    .dropdown-content a {
-      display:block;
-      color:#fff;
-      padding:8px 16px;
-      text-decoration:none;
-    }
-    .dropdown-content a:hover { background:#333; }
-    .dropdown:hover .dropdown-content { display:block; }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-    .steam-collection {
-      background:#1a1a1a;
-      padding:20px;
-      border-radius:12px;
-      margin-bottom:40px;
-      text-align:center;
-    }
-    .steam-collection h2 { margin-bottom:10px; }
-    .steam-collection p { margin-bottom:15px; font-size:1.1em; }
+body {
+  background-color: #121212;
+  color: white;
+  font-family: Arial, sans-serif;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
 
-    .carousel-container {
-      width:100%;
-      overflow:hidden;
-      border-radius:12px;
-      margin:0 auto;
-    }
-    .carousel-track {
-      display:flex;
-      transition:transform 0.5s ease-in-out;
-    }
-    .carousel-slide {
-      flex:0 0 calc(100%/3);
-      max-width:calc(100%/3);
-      padding:5px;
-    }
-    .carousel-slide img {
-      width:100%;
-      height:auto;
-      border-radius:8px;
-      display:block;
-    }
+/* Images latérales (masquées sur mobile) */
+.side-image {
+  position: fixed;
+  top: 0;
+  width: 20%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 0;
+}
 
-    .about {
-      background:#1a1a1a;
-      padding:20px;
-      border-radius:12px;
-      margin-bottom:40px;
-      text-align:center;
-    }
+.left-image {
+  left: 0;
+}
 
-    @media(max-width:768px) {
-      .carousel-slide { flex:0 0 calc(100%/2); max-width:calc(100%/2); }
-    }
-    @media(max-width:480px) {
-      .carousel-slide { flex:0 0 100%; max-width:100%; }
-    }
+.right-image {
+  right: 0;
+}
+
+.main-content {
+  position: relative;
+  z-index: 1;
+  margin-left: 20%;
+  margin-right: 20%;
+  padding: 40px 20px;
+  text-align: center;
+  flex-grow: 1;
+}
+
+.logo {
+  width: 150px;
+  margin-bottom: 20px;
+}
+
+.button {
+  background-color: #1e90ff;
+  color: white;
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 8px;
+  margin: 5px;
+  display: inline-block;
+  transition: background 0.3s;
+}
+
+.button:hover {
+  background-color: #0f75d1;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #1e1e1e;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px rgba(0,0,0,0.3);
+  border-radius: 8px;
+  z-index: 2;
+}
+
+.dropdown-content a {
+  color: white;
+  padding: 10px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #333;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Section Steam */
+.steam-collection {
+  margin-top: 50px;
+  padding: 30px;
+  background-color: #1a1a1a;
+  border-radius: 12px;
+  text-align: center;
+}
+
+.steam-collection h2 {
+  margin-bottom: 10px;
+}
+
+.steam-collection p {
+  margin-bottom: 15px;
+  font-size: 1.1em;
+}
+
+/* Carrousel */
+.carousel-container {
+  position: relative;
+  width: 100%;
+  max-width: 600px;
+  margin: 0 auto 20px;
+  overflow: hidden;
+  border-radius: 12px;
+}
+
+.carousel-track {
+  display: flex;
+  transition: transform 1s ease;
+  width: max-content;
+}
+
+.carousel-slide {
+  display: flex;
+  min-width: 100%;
+  justify-content: space-between;
+  flex-shrink: 0;
+}
+
+.carousel-slide img {
+  width: 32%;
+  height: auto;
+  border-radius: 12px;
+  object-fit: cover;
+}
+
+/* À propos */
+.about {
+  padding: 30px;
+  background-color: #1a1a1a;
+  border-radius: 12px;
+  margin: 40px auto;
+  max-width: 800px;
+  text-align: center;
+  z-index: 1;
+}
+
+/* Responsive : tablettes et téléphones */
+@media screen and (max-width: 1000px) {
+  .main-content,
+  .about {
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+
+  .side-image {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .main-content,
+  .about {
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 20px 10px;
+  }
+
+  .logo {
+    width: 120px;
+  }
+
+  .button {
+    display: block;
+    width: 100%;
+    margin: 10px 0;
+    padding: 12px;
+    font-size: 1.1em;
+  }
+
+  .dropdown-content {
+    position: static;
+    display: none;
+    width: 100%;
+  }
+
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+  .carousel-slide img {
+    width: 30%;
+  }
+}
   </style>
 </head>
 <body>
